integrated RabbitMQ
Including:
1. message sent & consume between pay-service and trade-service
2. uptimized message reliability from publishier(callback), MQ(message
durable), consumer(auto ack + retry + dlx)
3. delay mq implementation using dlx